--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "kaicui",
   "license": "Apache-2.0",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "0.19.0"
   },
   "repository": {
     "type": "git",
